week 4 assignment updated
